--- a/main/templates/system/about.html
+++ b/main/templates/system/about.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<!-- add contact info here -->
+<!-- add about info here -->
+
+<h1>About page</h1>
 
 {% endblock %}
