--- a/main/templates/system/contact.html
+++ b/main/templates/system/contact.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
 
-<!-- add about info here -->
+<!-- add contact info here -->
+
+<h1>Contact page</h1>
 
 {% endblock %}
